# ConsensusWeaverAgent

./: .coverage.ColinThinkBook.pid12124.X6FeBUmx.H02RartVFZjh  .coverage.ColinThinkBook.pid13072.XDzYFOlx.HTUg7lrrs9Oh  .coverage.ColinThinkBook.pid13964.XGv1nFFx.H8ltvTFFOi0h  .coverage.ColinThinkBook.pid18500.XmTwWeKx.Hd7jQge3nqTh  .coverage.ColinThinkBook.pid22664.XyM8neyx.HfHjeWwfNXgh  .coverage.ColinThinkBook.pid23648.XIFxvQlx.HCwk46XlvHVh  .coverage.ColinThinkBook.pid23960.X92gJinx.HiIRYhWI88uh  .coverage.ColinThinkBook.pid25272.XMWqsiEx.Hb9DqxoFeyPh  .coverage.ColinThinkBook.pid25396.XpkbBGvx.HSfW5OiPqH3h  .coverage.ColinThinkBook.pid27060.XNo4mqQx.HaXPa2fJnl5h  .coverage.ColinThinkBook.pid7504.XIBl2Yox.HcfPl0PSJtWh  .coverage.ColinThinkBook.pid7848.XowU5Z4x.HUC06Xa0djch  .coverage.ColinThinkBook.pid8624.X8LIYPix.Hq8V2WzCR3Xh  .gitignore  BRANCHING_GUIDELINES.md  CHANGELOG.md  CODEBUDDY.md  CODE_REVIEW_STANDARDS.md  EMERGENCY_FIX_PROCEDURE.md  GITHUB_FLOW_GUIDE.md  IFLOW.md  QWEN.md  README.md  TEST_OPTIMIZATION_PLAN.md  TEST_OPTIMIZATION_REPORT.md  VERSIONING_STRATEGY.md  llama_cpp_optimization_proposal.md  performance_analysis_report.txt  pyproject.toml  qwen3_model_evaluation_report.md  security-report.json  test-results.xml  test_difference_identification.py
.github/: pull_request_template.md
.github/workflows/: ci-cd.yml  ci.yml
.trae/documents/: langchain_migration.md  plan_20260119_085420.md  plan_20260124_040931.md  plan_20260124_055016.md  修复mypy类型检查错误.md  创建需求与系统分析技能模板.md  本地开发环境搭建.md
.trae/rules/: project_rules.md
.trae/skills/ci-auto-fix/: SKILL.md
.trae/skills/code-review/: SKILL.md
.trae/skills/file-organizer/: SKILL.md
.trae/skills/git-pushing/: SKILL.md
.trae/skills/sas/: SKILL.md
.trae/skills/sas/examples/: desktop_app_analysis.md  e-commerce_platform_analysis.md
.trae/skills/sas/templates/: architecture_design.md.j2  functional_design.md.j2  implementation_roadmap.md.j2  nonfunctional_requirements.md.j2  performance_optimization.md.j2  pyo3_binding.md.j2  requirement_analysis.md.j2  technology_selection.md.j2
Scripts/: cd.py  cd_usage.md  ci.py  ci.py.backup  cicd.py  download_nltk_data.py  download_qwen3-4B-Q5_K_M-gguf.py  download_qwen3-8b-gguf.py  llama_cpp_config_optimizer.py  local_ci.ps1
data/: performance_alerts.json  tool_metrics.json
docs/: langchain_migration.md
docs/analysis/: 项目完善空间分析报告.md
docs/design/: 技术选型.md  架构设计.md  项目完善变更设计方案.md
docs/dev/: 本地开发环境搭建.md
docs/planning/: 0.3.0版本功能规划.md  0.4.0版本功能规划.md
docs/requirements/: requirements.md
docs/user/: TUI使用说明.md
reports/security/: security-report.json
reports/test-results/: test-results.xml
src/: main.py
src/core/analyzer/: consensus_analyzer.py  consensus_analyzer_v2.py
src/core/executor/: query_executor.py  query_executor_v2.py
src/core/reporter/: multi_format_reporter.py  report_generator.py
src/infrastructure/cache/: cache_manager.py
src/infrastructure/config/: config_manager.py
src/infrastructure/data/: batch_operations.py  data_manager.py  data_validator.py  retry_handler.py  transaction_manager.py  unit_of_work.py
src/infrastructure/data/repositories/: __init__.py  interfaces.py  sqlite_repository.py
src/infrastructure/llm/: llm_service.py
src/infrastructure/logging/: logger.py
src/infrastructure/monitoring/: performance_monitor.py
src/infrastructure/tools/: error_handler.py  retry_handler.py  tool_manager.py  tool_selector.py
src/models/: __init__.py  entities.py
src/service/agent/: external_agent.py
src/service/batch/: __init__.py  batch_query_manager.py
src/service/history/: __init__.py  history_manager.py
src/service/interaction/: interaction_engine.py
src/service/learning/: feedback_learning_engine.py
src/service/strategy/: execution_strategy.py
src/ui/: rich_console.py  tui_manager.py
tests/: conftest.py  test_difference_identification.py  test_external_tools.py
tests/integration/: test_external_tools.py  test_tui_integration.py
tests/unit/: test_cache_manager.py  test_config_manager.py  test_data_manager.py  test_execution_strategy.py  test_history_manager.py  test_interaction_engine.py  test_llm_service.py  test_logger.py  test_main.py  test_multi_format_reporter.py  test_query_executor.py  test_report_generator.py  test_tool_manager.py
tests/unit/models/: __init__.py  test_entities.py
tests/unit/ui/: test_rich_console.py  test_tui_manager.py
(+24 files in other folders)
