# pyproject.toml for ConsensusWeaverAgent

[project]
name = "consensusweaveragent"
version = "0.2.0.dev0"
description = "智能问答协调终端应用"
authors = [
    { name = "Colin", email = "yecllsl@outlook.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "click>=8.1.7",
    "pyyaml>=6.0.2",
    "langchain>=1.2.0",
    "langchain-community>=0.4.0",
    "llama-cpp-python>=0.2.72",
    "nltk>=3.8.1",
    "scikit-learn>=1.5.0",
    "modelscope>=1.33.0",
    "pytest-asyncio>=1.3.0",
    "bandit>=1.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.5",
    "mypy>=1.9.0",
    "build>=1.2.0",
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[tool.ruff.format]
indent-style = "space"

# Mypy configuration
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
exclude = [".venv", "test_*.py", "tests", "Scripts"]

# 忽略没有类型定义的包
[[tool.mypy.overrides]]
module = [
    "yaml",
    "nltk",
    "nltk.*",
    "sklearn",
    "sklearn.*",
    "numpy",
    "numpy.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = "."
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

# Build system
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.core", "src.infrastructure", "src.models", "src.service", "src.ui", "src.utils"]

[project.scripts]
consensusweaver = "src.main:main"

[dependency-groups]
dev = [
    "mypy>=1.9.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.5.5",
    "types-click>=7.1.8",
]
